--- a/Tyuiu.KropchevSR.Sprint6.Task3.V18.Test/Tyuiu.KropchevSR.Sprint6.Task3.V18.Test.csproj
+++ b/Tyuiu.KropchevSR.Sprint6.Task3.V18.Test/Tyuiu.KropchevSR.Sprint6.Task3.V18.Test.csproj
@@ -55,6 +55,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Tyuiu.KropchevSR.Sprint6.Task3.V18.Lib\Tyuiu.KropchevSR.Sprint6.Task3.V18.Lib.csproj">
+      <Project>{c1a8cb8d-f733-4d74-9750-2b31b7c523be}</Project>
+      <Name>Tyuiu.KropchevSR.Sprint6.Task3.V18.Lib</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
